Tue Oct 21 09:10:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Acceptor_Impl.h:
          Doxygen change

        * tao/Acceptor_Registry.{h,cpp}:
        * tao/RTPortableServer/RT_POA.cpp
          Bool/const changes

        * tao/RTCORBA/RT_Policy_i.cpp:
          Get keep_alive/dont_rout from orb params

        * tao/RTPortableServer/RT_Policy_Validator.cpp:
          Bool changes

        * tao/Transport_Acceptor.h:
          Layout changes

Tue Oct 21 07:32:43 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * examples/Simple/grid/Grid_i.h:
        * examples/Simple/grid/Grid_i.cpp:

          Fixed a 'min' name clash on Windows.

Mon Oct 20 14:06:52 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tao/Bounded_Sequence_CDR_T.h:
        * tao/Unbounded_Sequence_CDR_T.h:

          Add back missing long long marshal and demarshal ops to restore
          performance for these types.

          This fixes bug #3465.

Mon Oct 20 13:50:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TransportCurrent/Current_Impl.cpp:
          Fixed CB2009 warning

Mon Oct 20 13:23:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/File_IO/File_i.cpp:
        * tests/POA/Default_Servant2/File_i.cpp:
          Use ACE_OS::atol

Mon Oct 20 13:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/LoadBalancing/server.cpp
        * orbsvcs/performance-tests/LoadBalancing/LBPerf/CPU/server.cpp
        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/server.cpp
        * orbsvcs/tests/FtRtEvent/supplier.cpp
          Use ACE_OS::atof

Mon Oct 20 12:25:45 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/be/be_visitor_component/component_ch.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
        * tao/Object.h:
        * tao/PolicyC.h:

          Remove unsafe default of TAO_ORB_Core pointer from the CORBA::Object