@@ -33,7 +33,7 @@ TAO_Server_Protocol_Acceptor_Filter::fill_profile (
   // which protocols get included into IOR and in what order.
   for (CORBA::ULong j = 0; j < this->protocols_.length (); ++j)
     {
-      CORBA::ULong protocol_type = this->protocols_[j].protocol_type;
+      CORBA::ULong const protocol_type = this->protocols_[j].protocol_type;
 
       for (TAO_Acceptor** acceptor = acceptors_begin;
            acceptor != acceptors_end;
